- Edit function temporary success (need to enhance more). TODO: delete order function